--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "db:migrate": "ts-node src/providers/database/migrate.ts"
     },
     "dependencies": {
-        "@auth/drizzle-adapter": "^0.3.14",
         "@discordjs/builders": "^1.7.0",
         "@discordjs/rest": "^2.2.0",
         "@headlessui/react": "^1.7.18",
@@ -52,6 +51,8 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
-        "@types/node": "^20.12.2"
+        "@auth/drizzle-adapter": "^0.3.14",
+        "@types/node": "^20.12.2",
+        "pnpm": "^8.15.5"
     }
 }
